# cookiecutter-fastapi

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  azure-pipelines.yml  cookiecutter.json  docker-compose.yml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yaml
app/: main.py
app/core/: config.py  paginator.py
app/services/: sample.py
sample/pregnancy-model/: .env.example  Makefile  README.md  alembic.ini  compare.sh  model.py  pregnancy_model_local.joblib  pyproject.toml
sample/pregnancy-model/.github/workflows/: ci.yaml
sample/pregnancy-model/app/: main.py
sample/pregnancy-model/app/api/: __init__.py
sample/pregnancy-model/app/api/routes/: predictor.py
sample/pregnancy-model/app/core/: config.py  database.py  errors.py  events.py
sample/pregnancy-model/app/models/: item.py  prediction.py
sample/pregnancy-model/app/services/: predict.py
sample/pregnancy-model/migrations/versions/: 0001_create_items_table.py
sample/pregnancy-model/ml/data/: make_dataset.py
sample/pregnancy-model/ml/model/: pregnancy_model.py
sample/pregnancy-model/ml/model/examples/: example.json
sample/pregnancy-model/tests/: test_database.py  test_pagination_behavior.py
tests/: test_pagination_behavior.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  azure-pipelines.yml  docker-compose.yml  egg.sh  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/app/: __init__.py  db.py  main.py
{{cookiecutter.project_slug}}/app/api/: __init__.py
{{cookiecutter.project_slug}}/app/api/routes/: api.py  predictor.py  sample.py
{{cookiecutter.project_slug}}/app/core/: config.py  errors.py  events.py  paginator.py
{{cookiecutter.project_slug}}/app/models/: log.py  prediction.py  sample.py
{{cookiecutter.project_slug}}/app/services/: predict.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 0001_create_items_table.py
{{cookiecutter.project_slug}}/ml/data/: make_dataset.py
{{cookiecutter.project_slug}}/ml/examples/: example.json
{{cookiecutter.project_slug}}/ml/features/: build_features.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_api_predictor.py  test_config_and_errors.py  test_database.py  test_events_and_main.py  test_pagination_behavior.py  test_predict_service.py  test_predictor.py  test_request_logging.py
