[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Arthur Henrique <arthur393@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.4.4"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
